--- a/lab18/css/flexbox.css
+++ b/lab18/css/flexbox.css
@@ -9,7 +9,7 @@ header {
   border-style: double;
   border-color: black;
   margin: 10px;
-  background-color: DarkCyan;
+  background-image: linear-gradient(#479c9f, #4a5f75, #529c83);
   padding: 10px;
 }
 
@@ -18,7 +18,7 @@ main {
   border-style: double;
   border-color: black;
   margin: 10px;
-  background-color: DarkCyan;
+  background-image: linear-gradient(#479c9f, #4a5f75, #529c83);
   padding: 5px;
   justify-content: center;
   align-items: center;
@@ -40,7 +40,7 @@ aside{
   border-style: double;
   border-color: black;
   margin: 10px;
-  background-color:DarkCyan;
+  background-image: linear-gradient(#479c9f, #4a5f75, #529c83);
   padding: 10px;
   justify-content: flex-end;
 }
@@ -69,7 +69,7 @@ nav {
   border-color: black;
   margin: 10px;
   word-spacing: 10px;
-  background-color: white;
+  background-image: linear-gradient(#479c9f, #4a5f75, #529c83);
   padding: 10px;
   align-items: flex-start;
 }
@@ -85,7 +85,7 @@ footer {
   border-color: black;
   margin: 10px;
   word-spacing: 10px;
-  background-color: white;
+  background-image: linear-gradient(#479c9f, #4a5f75, #529c83);
   padding: 10px;
   align-items: flex-start;
 }
