--- a/finalproject/css/lab.css
+++ b/finalproject/css/lab.css
@@ -15,25 +15,30 @@ p{
   float: right;
   text-align: center;
 }
-#image1{
-  float: left;
 
+.center{
+  display: block;
+  margin-left:auto;
+  margin-right: auto;
+  width: 80%;
+  max-height: 300px;
 }
-#image1 img{
-  width: 150%;
-  max-height:300px;
-  float: center;
-  align-content: center;
-}
-
-.col img{
+.row img{
   width: 100%;
   border-radius: 5px;
   border-style: solid;
   border-color: #4b4e6d;
   box-shadow: 5px 5px 5px #84dcc6;
-
 }
+
+.row img:hover{
+  width: 110%;
+  height; auto;
+  filter: blur(4px);
+  object-fit: cover;
+  transition: width 1s;
+}
+
 .tooltip-wrap {
   position: relative;
 }
@@ -50,6 +55,7 @@ p{
   text-align: center;
   align-content: center;
   text-shadow: 1px 1px 1px black;
+
 }
 
  h1,  h2{
@@ -59,36 +65,7 @@ p{
 }
 .row{
   width: 100%;
-  border-radius: 5px;
-  border: 100px soild #4b4e6d;
-  box-shadow: #84dcc6;
-}
-
-.navbar-brand{
-  color: #84dcc6;
-
 }
 .dropdown-item {
   color: #4b4e6d;
-}
-.bg-warning {
-    background-color: #4b4e6d;
-}
-img{
-  width: 100%;
-
-}
-.col img:hover{
-  width: 110%;
-  height; auto;
-  filter: blur(2px);
-  object-fit: cover;
-  transition: width 1s;
-
-}
-nav{
-  background-color: #4b4e6d;
-}
-.bg-light{
- color:  #87399d;
 }
